# Twogether

./: .env  .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SUPABASE_SETUP.md  docker-compose.yml  env.example  love_time.db  start-dev.sh  test-integration.js  test_pairing_flow.sh
.cursor/rules/: react.mdc
.github/workflows/: ci.yml  deploy.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-000aa9b5d8174e7f24ba98fda14cd144d89f73097c4eec738c13e77f57300685.json  query-05a63f45408c83823e7cfc59d17bd3d0e2c1ac2e3854625831f376cfca30c243.json  query-5ade55c4ab39c6cd457919d6eda448d5f4c0b15998d3bc918befac15b6a37d62.json  query-5d3b4b7055c48d35ae542d1b09663ad3038e52dc3fa9fd562cc5ce81fa9ac4ce.json  query-8902ff2000d8927bd227752c5c799e5ceec4770e01729b04589d0b79e7622ed4.json  query-94be24399d8f860c14c35f78362ad7e4e88365aa03b6aac441f7c7a8c1986329.json  query-96538c296dfb97ddf4e7035d1bc38d364df209b4aca6cb1aecdaacd7b634ca7a.json  query-99abab4a6cd63dc94216daf3b10ab22705b313c12b5b296eeb93d4c7c3183c8c.json  query-a997008c740ddd266b35db15b71c4116f4260c96b021a592e45620513a958761.json  query-b93ad8834721caed5711b872b586107d6e78187747cc6b92f2ac0d9c3cbaa343.json  query-bdea400a5743964f00eb7a5d326dc3ff1e7a85389b169cff5b189e214c354c70.json  query-bf6c4d0f17a907e9b457cae50b1f7b47b790bf45bbc8c4374c2e63acf8241ce8.json  query-c62e395d7ddf4b1e2bae06d5c4026ebd57bfadca2007185f816172017d8a33ed.json  query-ec6aaa27b7f2a9e361bd694e668aa3b8b64b395b818fe22e2b9f50749d89f49a.json  query-fc3e566aacf7091f0c3661f69bc7e27170cfa1383ea4eb92b9226cf9e88644c5.json  query-fdd929f0a308000989dbda5dced698ad7779cd1a94370c5a6c19f6bffc811b89.json
backend/migrations/: 001_initial_schema.sql  002_enhance_love_moments.sql  003_photos_in_db.sql  004_move_photos_to_supabase.sql  005_allow_single_user_couples.sql  006_coins_system.sql  007_add_missing_columns.sql  008_add_pairing_codes.sql
backend/src/: config.rs  database.rs  error.rs  main.rs  models.rs
backend/src/middleware/: auth.rs  logging.rs  mod.rs
backend/src/routes/: achievements.rs  auth.rs  coins.rs  couples.rs  love_moments.rs  mod.rs  photos.rs  stats.rs
backend/src/services/: auth.rs  mod.rs  supabase.rs
backend/tests/: pairing_integration_test.rs
backend/tests/common/: mod.rs
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AchievementsView.tsx  (+4 more)
scripts/: deploy.sh  dev-setup.sh  dev-start.sh  restart-dev.sh  view-logs.sh
(+3 files in other folders)
